--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Broadway</title>
-    <link href="./resources/css/style.css"
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
 <h1 id="top-title">Broadway Design</h1>
