Div element implimented

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-<h1 id="top-title">Broadway Design</h1>
+<div class="top-menu">
+ <h1>Broadway Design</h1>
+ </div>
   </body>
 </html>
