--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <body>
 <div class="top-menu">
  <h1>Broadway Design</h1>
+  <div id="page-links">
+   <h4><a href="./home.html">Home</a></h4>
+   <h4><a href="./index.html">Process</a></h4>
+   <h4><a href="./index.html">Work</a></h4>
+  </div>
  </div>
   </body>
 </html>
