--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-  <div class="top-menu">
-   <h1>Broadway Design</h1><br /><br />
-   <h4><a href="./home.html">Home</a></h4>
-   <h4><a href="./index.html">Process</a></h4>
-   <h4><a href="./index.html">Work</a></h4>
-  </div>
+   <div class="top-menu">
+     <h1>Broadway Design</h1><br /><br />
+    <div id="page-links">
+     <h4><a href="./home.html">Home</a></h4>
+     <h4><a href="./index.html">Process</a></h4>
+     <h4><a href="./index.html">Work</a></h4>
+    </div>
+   </div>
     <h3 id="our-process">Our Process</h3>
   </body>
 </html>
