--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
   <body>
   <div class="top-menu">
    <h1>Broadway Design</h1>
-  </div>
    <div id="page-links">
-  <ol>
-    <li><a href="./home.html">Home</a></li>
-    <li><a href="./index.html">Process</a></li>
-    <li><a href="./index.html">Work</a></li>
-  </ol>
+    <h4><a href="./home.html">Home</a></h4>
+    <h4><a href="./index.html">Process</a></h4>
+    <h4><a href="./index.html">Work</a></h4>
    </div>
+  </div>
     <h3 id="our-process">Our Process</h3>
   </body>
 </html>
