--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <div class="top-menu">
-   <h1>Broadway Design</h1>
+   <p>Broadway Design</p>
    <div id="page-links">
     <h4><a href="./home.html">Home</a></h4>
     <h4><a href="./index.html">Process</a></h4>
