--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h4><a href="./home.html">Home</a></h4>
     <h4><a href="./index.html">Process</a></h4>
     <h4><a href="./index.html">Work</a></h4>
+    <h4><a href="./index.html">Contact</a></h4>
    </div>
   </div>
     <h3 id="our-process">Our Process</h3>
