Page Links size fix

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-  <div class="top-menu">
+  <div id="top-menu">
    <p>Broadway Design</p>
-   <div id="page-links">
-    <h4><a href="./home.html">Home</a></h4>
-    <h4><a href="./index.html">Process</a></h4>
-    <h4><a href="./index.html">Work</a></h4>
-   </div>
   </div>
+   <div id="page-links">
+    <p><a href="./home.html">Home</a></p>
+    <p><a href="./index.html">Process</a></p>
+    <p><a href="./index.html">Work</a></p>
+   </div>
     <h3 id="our-process">Our Process</h3>
   </body>
 </html>
