Background Image Fix

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-  <div id="top-menu">
-   <p>Broadway Design</p>
-  </div>
+  <div class="background-image">
+   <div id="top-menu">
+    <p>Broadway Design</p>
+   </div>
    <div id="page-links">
     <p><a href="./home.html">Home</a></p>
     <p><a href="./index.html">Process</a></p>
     <p><a href="./index.html">Work</a></p>
    </div>
+  </div>
     <h3 id="our-process">Our Process</h3>
   </body>
 </html>
